fix: background not scaling on mobile

--- a/apps/frontend/src/app.css
+++ b/apps/frontend/src/app.css
@@ -12,5 +12,5 @@ body {
 	background-image: url('/background.png');
 	background-position: center;
 	background-repeat: repeat;
-	background-size: 100%;
+	background-size: cover;
 }
